--- a/app/src/main/res/layout/activity_time_info.xml
+++ b/app/src/main/res/layout/activity_time_info.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_time_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_default"
-    tools:context="com.alextavella.oadivinho.MainActivity">
+    tools:context="com.alextavella.oadivinho.TimeDetailsActivity">
+
+    <TextView
+        android:id="@+id/tvInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/time_tamanho_info" />
 
 </RelativeLayout>
