--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,15 @@
     <color name="primary">#2196F3</color>
     <color name="primary_dark">#1976D2</color>
     <color name="primary_light">#BBDEFB</color>
-    <color name="accent">#8BC34A</color>
+    <color name="accent">#cf0c4d</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
 
+    <!--SplashScreen-->
     <color name="background_splash">#000000</color>
+
+    <!--TimeS2-->
+    <color name="time_cor_titulo">@color/primary_text</color>
 </resources>
